--- a/Templates/result.html
+++ b/Templates/result.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="/static/css/style1.css">
-    <link rel="stylesheet" href="/static/css/style.css">
-    <link rel="stylesheet" href="/static/css/styleresult.css">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/style1.css">
+    <link rel="stylesheet" href="../static/css/styleresult.css">
 
 </head>
 
@@ -25,15 +25,15 @@
 
     <header class="header">
 
-        <a href="#" class="logo">Speak Up Buddy</a>
+        <a href="#" class="logo">PreMade VOCO</a>
         
         <nav class="navbar">
-            <a href="/Templates/index.html">Home</a>
-            <a href="/Templates/index.html">Features</a>
-            <a href="/Templates/Flowchart_Procedure.html">Flowchart and Procedure</a>
-            <a href="/Templates/Project_outcomes.html">Project Outcomes</a>
-            <a href="/Templates/developers.html">Developers</a>
-            <a href="/Templates/testnow.html" ><button class="btn" id="test">Try Now</button></a>
+            <a href="./index.html">Home</a>
+            <a href="./index.html">Features</a>
+            <a href="./Flowchart_Procedure.html">Flowchart and Procedure</a>
+            <a href="./Project_outcomes.html">Project Outcomes</a>
+            <a href="./developers.html">Developers</a>
+            <a href="./testnow.html" ><button class="btn" id="test">Try Now</button></a>
         </nav>
     </header>
 
@@ -137,7 +137,7 @@
         <div class="box-container">
     
             <div class="box">
-                <a href="#" class="logo"> Speak Up Buddy</a>
+                <a href="#" class="logo">PreMade VOCO</a>
                 <div class="share">
                     <a href="#" class="fab fa-facebook-f"></a>
                     <a href="#" class="fab fa-twitter"></a>
@@ -148,21 +148,19 @@
     
             <div class="box">
                 <h3>contact info</h3>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> 8394998335 </a>
-                <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> Bulandshahr, India </a>
+                
                 <a href="#" class="links"> <i class="fas fa-phone"></i> 8789242056 </a>
                 <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> Bihar, India </a>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> 9354007718 </a>
-                <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> Ghaziabad, India </a>
+                
             </div>
     
             <div class="box">
                 <h3>quick links</h3>
-                <a href="/Templates/index.html" class="links"> <i class="fas fa-arrow-right"></i> home </a>
-                <a href="/Templates/index.html" class="links"> <i class="fas fa-arrow-right"></i> features </a>
-                <a href="/Templates/Flowchart_Procedure.html" class="links"> <i class="fas fa-arrow-right"></i> flowchart and Procedure</a>
-                <a href="/Templates/Project_outcomes.html" class="links"> <i class="fas fa-arrow-right"></i> Project Outcomes </a>
-                <a href="/Templates/developers.html" class="links"> <i class="fas fa-arrow-right"></i> Developers </a>
+                <a href="./index.html" class="links"> <i class="fas fa-arrow-right"></i> home </a>
+                <a href="./index.html" class="links"> <i class="fas fa-arrow-right"></i> features </a>
+                <a href="./Flowchart_Procedure.html" class="links"> <i class="fas fa-arrow-right"></i> flowchart and Procedure</a>
+                <a href="./Project_outcomes.html" class="links"> <i class="fas fa-arrow-right"></i> Project Outcomes </a>
+                <a href="./developers.html" class="links"> <i class="fas fa-arrow-right"></i> Developer </a>
             </div>
 
         </div>
