--- a/Templates/developers.html
+++ b/Templates/developers.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
     <title>Developers</title>
 </head>
 <body>
     <header class="header">
 
-        <a href="#" class="logo"> Speak Up Buddy</a>
+        <a href="#" class="logo"> PreMade VOCO</a>
         
         <nav class="navbar">
-            <a href="/Templates/index.html">home</a>
-            <a href="/Templates/index.html">Features</a>
-            <a href="/Templates/Flowchart_Procedure.html">Flowchart and Procedure</a>
+            <a href="./index.html">home</a>
+            <a href="./index.html">Features</a>
+            <a href="./Flowchart_Procedure.html">Flowchart and Procedure</a>
             <a href="#Project Outcomes">Project Outcomes</a>
             <a href="#review">Developers</a>
-            <a href="/Templates/testnow.html" ><button class="btn" id="test">Try Now</button></a>
+            <a href="./testnow.html" ><button class="btn" id="test">Try Now</button></a>
         </nav>
     </header>
 
@@ -34,20 +34,15 @@
             <div class="swiper-wrapper">
     
                 <div class="swiper-slide box">
-                    <img src="/static/image/DSC_0091-00.jpg" alt="">
-                    <h3>Shivam Gupta</h3>
-                    <p><a href="https://www.linkedin.com/in/shivam-gupta-57329123a/" target="_blank" class="fab fa-linkedin fa-2x"></a><a href="https://www.instagram.com/increvil_shivam_/" target="_blank" class="fab fa-instagram fa-2x"></a></p>
+                   
                     
                      
-                    <img src="/static/image/rajeev_kumar.jpeg" alt="">
+                    <img src="../static/image/rajeev_kumar.jpeg" alt="">
                     <h3>Rajeev Kumar</h3>
                     <p><a href="https://www.linkedin.com/in/rajeev-kumar-336051222/" target="_blank" class="fab fa-linkedin fa-2x"></a> <a href="https://www.instagram.com/rajeev_kumar_q.0/" target="_blank" class="fab fa-instagram fa-2x" ></a></p>
                     
     
-                    <img src="/static/image/ayush_mishra.jpeg" alt="">
-                    <h3>Ayush Mishra</h3>
-                    <p><a href="https://www.linkedin.com/in/ayush-mishra-158b621ba/" target="_blank" class="fab fa-linkedin fa-2x"></a><a href="https://www.instagram.com/_thefebguy_/" target="_blank" class="fab fa-instagram fa-2x"></a></p>
-                    
+                   
                 </div>
     
             </div>
@@ -62,7 +57,7 @@
         <div class="box-container">
     
             <div class="box">
-                <a href="#" class="logo"> Speak Up Buddy</a>
+                <a href="#" class="logo"> PreMade VOCO</a>
                 <div class="share">
                     <a href="#" class="fab fa-facebook-f"></a>
                     <a href="#" class="fab fa-twitter"></a>
@@ -73,21 +68,19 @@
     
             <div class="box">
                 <h3>contact info</h3>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> 8394998335 </a>
-                <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> Bulandshahr, India </a>
+                
                 <a href="#" class="links"> <i class="fas fa-phone"></i> 8789242056 </a>
                 <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> Bihar, India </a>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> 9354007718 </a>
-                <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> Ghaziabad, India </a>
+                
             </div>
     
             <div class="box">
                 <h3>quick links</h3>
-                <a href="/Templates/index.html" class="links"> <i class="fas fa-arrow-right"></i> home </a>
-                <a href="/Templates/index.html" class="links"> <i class="fas fa-arrow-right"></i> features </a>
-                <a href="/Templates/Flowchart_Procedure.html" class="links"> <i class="fas fa-arrow-right"></i> flowchart and Procedure</a>
-                <a href="/Templates/Project_outcomes.html" class="links"> <i class="fas fa-arrow-right"></i> Project Outcomes </a>
-                <a href="/Templates/developers.html" class="links"> <i class="fas fa-arrow-right"></i> Developers </a>
+                <a href="./index.html" class="links"> <i class="fas fa-arrow-right"></i> home </a>
+                <a href="./index.html" class="links"> <i class="fas fa-arrow-right"></i> features </a>
+                <a href="./Flowchart_Procedure.html" class="links"> <i class="fas fa-arrow-right"></i> flowchart and Procedure</a>
+                <a href="./Project_outcomes.html" class="links"> <i class="fas fa-arrow-right"></i> Project Outcomes </a>
+                <a href="./developers.html" class="links"> <i class="fas fa-arrow-right"></i> Developer </a>
             </div>
 
         </div>
