--- a/Templates/testnow.html
+++ b/Templates/testnow.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="/static/css/style.css">
-    <link rel="stylesheet" href="/static/css/style1.css">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/style1.css">
     <title>Test It Now!!</title>
 </head>
 <body>
     <header class="header">
 
-        <a href="#" class="logo"> Speak Up Buddy</a>
+        <a href="#" class="logo"> PreMade VOCO</a>
     
         <nav class="navbar">
-            <a href="/Templates/index.html">home</a>
-            <a href="/Templates/index.html">Features</a>
-            <a href="/Templates/Flowchart_Procedure.html">Flowchart and Procedure</a>
-            <a href="/Templates/Project_outcomes.html">Project Outcomes</a>
-            <a href="/Templates/developers.html">Developers</a>
-            <a href="/Templates/testnow.html"><button class="btn" id="test">Try Now</button></a>
+            <a href="./index.html">Home</a>
+            <a href="./index.html">Features</a>
+            <a href="./Flowchart_Procedure.html">Flowchart and Procedure</a>
+            <a href="./Project_outcomes.html">Project Outcomes</a>
+            <a href="./developers.html">Developers</a>
+            <a href="./testnow.html" ><button class="btn" id="test">Try Now</button></a>
         </nav>
     </header>
 
@@ -38,8 +38,8 @@
                 <div class="swiper-slide box">
                    
                     <div class="price"></div>
-                    <a href="http://localhost:5000/predict" class="btn" > <img src="/static/image/Button_2.png" alt="" height="150px" onclick="notifySuccess()" 
-    ></a>
+                    <a href="http://localhost:5000/predict" class="btn" > <img src="../static/image/Button_2.png" alt="" height="150px" onclick="notifySuccess()" 
+                    ></a>
                     <div class="hh"><h3 >
                         Click the above button to experience and to test the facial and vocal emotions. Further you can view the results of your performance with some suggestions as there is always a scope to improve yourself.
                     </h3></div>
@@ -60,7 +60,7 @@
         <div class="box-container">
     
             <div class="box">
-                <a href="#" class="logo"> Speak Up Buddy</a>
+                <a href="#" class="logo"> PreMade VOCO</a>
                 <div class="share">
                     <a href="#" class="fab fa-facebook-f"></a>
                     <a href="#" class="fab fa-twitter"></a>
@@ -71,21 +71,19 @@
     
             <div class="box">
                 <h3>contact info</h3>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> 8394998335 </a>
-                <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> Bulandshahr, India </a>
+                
                 <a href="#" class="links"> <i class="fas fa-phone"></i> 8789242056 </a>
                 <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> Bihar, India </a>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> 9354007718 </a>
-                <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> Ghaziabad, India </a>
+                
             </div>
     
             <div class="box">
                 <h3>quick links</h3>
-                <a href="/Templates/index.html" class="links"> <i class="fas fa-arrow-right"></i> home </a>
-                <a href="/Templates/index.html" class="links"> <i class="fas fa-arrow-right"></i> features </a>
-                <a href="/Templates/Flowchart_Procedure.html" class="links"> <i class="fas fa-arrow-right"></i> flowchart and Procedure</a>
-                <a href="/Templates/Project_outcomes.html" class="links"> <i class="fas fa-arrow-right"></i> Project Outcomes </a>
-                <a href="/Templates/developers.html" class="links"> <i class="fas fa-arrow-right"></i> Developers </a>
+                <a href="./index.html" class="links"> <i class="fas fa-arrow-right"></i> home </a>
+                <a href="./index.html" class="links"> <i class="fas fa-arrow-right"></i> features </a>
+                <a href="./Flowchart_Procedure.html" class="links"> <i class="fas fa-arrow-right"></i> flowchart and Procedure</a>
+                <a href="./Project_outcomes.html" class="links"> <i class="fas fa-arrow-right"></i> Project Outcomes </a>
+                <a href="./developers.html" class="links"> <i class="fas fa-arrow-right"></i> Developer </a>
             </div>
 
         </div>
